# itoyori

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/actions/setup-mpi/: action.yaml
.github/workflows/: docs.yaml  test.yaml
cmake/: config.cmake.in
docs/: Doxyfile  header.html
docs/src/: 01_tutorial.md  02_pitfalls.md  tutorial.md
examples/: CMakeLists.txt  cilksort.cpp  fib.cpp  nqueens.cpp
include/ityr/: ityr.hpp
include/ityr/common/: allocator.hpp  freelist.hpp  global_lock.hpp  logger.hpp  mpi_rma.hpp  mpi_util.hpp  numa.hpp  options.hpp  physical_mem.hpp  prof_events.hpp  profiler.hpp  rma.hpp  span.hpp  topology.hpp  util.hpp  virtual_mem.hpp  wallclock.hpp
include/ityr/common/rma/: mpi.hpp  utofu.hpp
include/ityr/container/: checkout_span.hpp  global_span.hpp  global_vector.hpp  unique_file_ptr.hpp  workhint.hpp  workhint_view.hpp
include/ityr/ito/: callstack.hpp  context.hpp  ito.hpp  options.hpp  prof_events.hpp  scheduler.hpp  thread.hpp  util.hpp  worker.hpp  wsqueue.hpp
include/ityr/ito/arch/: aarch64.hpp  x86_64.hpp
include/ityr/ito/sched/: adws.hpp  randws.hpp  serial.hpp  util.hpp
include/ityr/ori/: block_region_set.hpp  block_regions.hpp  cache_manager.hpp  cache_profiler.hpp  cache_system.hpp  coll_mem.hpp  coll_mem_manager.hpp  core.hpp  file_mem.hpp  file_mem_manager.hpp  global_ptr.hpp  home_manager.hpp  home_profiler.hpp  mem_mapper.hpp  noncoll_mem.hpp  options.hpp  ori.hpp  prof_events.hpp  release_manager.hpp  tlb.hpp  util.hpp
include/ityr/pattern/: count_iterator.hpp  execution.hpp  global_iterator.hpp  iterator.hpp  parallel_filter.hpp  parallel_invoke.hpp  parallel_loop.hpp  parallel_merge.hpp  parallel_reduce.hpp  parallel_search.hpp  parallel_shuffle.hpp  parallel_sort.hpp  random.hpp  reducer.hpp  reducer_extra.hpp  root_exec.hpp  serial_loop.hpp
tests/: CMakeLists.txt  adws.cpp  doctest.cpp
